<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Klassify</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Menu</string>
    <string name="drawer_close">Closed</string>
    <string name="header_menu">Menu</string>
    <string name="menu_login">Login</string>
    <string name="menu_signup">Sign Up</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_account_edit">Edit Account</string>
    <string name="account_name">Name : </string>
    <string name="account_email">Email : </string>
    <string name="account_address">Address : </string>
    <string name="account_phonenumber">Phone Number : </string>
    <string name="account_oldpassword">Old Password : </string>
    <string name="account_newpassword">New Password : </string>
    <string name="account_confirmpassword">Confirm Password : </string>
    <string name="network_fetching">Fetching ... </string>
    <string name="account_oldPassword">Old Password : </string>
    <string name="account_newPassword">New Password : </string>
    <string name="account_newConfirmPassword">Confirm New Password : </string>
    <string name="title_activity_social_sign_up">Social Sign Up</string>
    <string name="menu_social_signup">Signup with Social Network</string>
    <string name="facebook_app_id">637137979724925</string>
    <string name="primary_color_string">#FFFFFF</string>
    <string name="secondary_color_string">#6E68AF</string>
    <string name="menu_hello">Hello Guest</string>
    <string name="network_not_connected">You are not connected to internet!</string>
    <string name="title_activity_new_ad">Post New Advertisement</string>
    <string name="image_description_postnewad">Post New Add Button</string>
    <string name="image_description_itemphoto">Item photo add button</string>
    <string name="menu_text_editorsChoice">Editors Choice</string>
    <string name="title_activity_view_ad">Ad Detail</string>
    <string name="menu_adtitle">Ad Title</string>
    <string name="menu_description">Description</string>
    <string name="menu_post">Post</string>
    <string name="menu_price">Price</string>
    <string name="menu_myads">My Ads</string>
    <string name="viewad_textview_adtitle">Ad Tile</string>
    <string name="viewad_networkimageview_loading">Loding</string>
    <string name="viewad_textview_price">BDTPrice</string>
    <string name="viewad_textview_description">Description</string>
    <string name="viewad_textview_category">Category</string>
    <string name="viewad_textview_subcategory">SubCategory</string>
    <string name="viewad_textview_posted">Posted</string>
    <string name="viewad_type">Ad Type : </string>

    <string name="action_share">Share</string>
    <string name="action_wishlist">Wish List</string>
    <string name="action_call">Call</string>
    <string name="action_message">Message</string>
    <string name="action_email">Email</string>

    <string name="share_default_message">Shared from Klassify App</string>
    <string name="share_default_link">http://www.checkboxdevelopers.com</string>

    <string-array name="type">
        <item>Choose a Type</item>
        <item>Buying</item>
        <item>Selling</item>
        <item>Services</item>
    </string-array>

    <string-array name="ServicesCategory">
        <item>Home Tutor</item>
        <item>Job</item>
        <item>Driver</item>
    </string-array>

    <string-array name="categories">
        <item>Choose a Category</item>
        <item>Electronics and Computers</item>
        <item>Real Estate</item>
        <item>Mobiles and Tablets</item>
        <item>Vehicles</item>
        <item>Clothes and Fashion</item>
        <item>Books</item>
    </string-array>

    <string-array name="RealEstateSubCategory">
        <item>Choose a SubCategory</item>
        <item>Rent</item>
        <item>Buy Properties</item>
    </string-array>

    <string-array name="MobTabSubCat">
        <item>Mobiles</item>
        <item>Tablets</item>
    </string-array>

    <string-array name="ElecAndComAc">
        <item>Choose a Sub Category</item>
        <item>Laptops</item>
        <item>Desktops amd Computer Accessories</item>
        <item>Camera and Accessories</item>
        <item>Televisions</item>
        <item>Refrigerators</item>
        <item>Home Theater</item>
    </string-array>

    <string-array name="VehiclesSubCat">
        <item>Choose a Sub Category</item>
        <item>Motorcycles</item>
        <item>Cars</item>
        <item>Bicycles</item>
    </string-array>

    <string-array name="BooksSubCat"> <item>Novels</item>
        <item>Educational</item>
        <item>Choose a SubCategory</item>
    </string-array>

    <string-array name="ClothingAndFashionSubCat">
        <item>Choose a Sub Category</item>
        <item>Men Wear</item>
        <item>Women Clothing</item>
        <item>Children Outfit</item>
    </string-array>

</resources>
