<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shaheed.klassify.ViewAdActivity">
    <item android:id="@+id/action_share" android:title="@string/action_share"
        android:icon="@drawable/share"
        app:showAsAction="always" />
    <item android:id="@+id/action_wishList" android:title="@string/action_wishlist"
        android:icon="@drawable/favorite"
        app:showAsAction="always" />

    <item android:id="@+id/action_call" android:title="@string/action_call"
        android:icon="@drawable/call_icon"
        app:showAsAction="always" />
    <item android:id="@+id/action_message" android:title="@string/action_message"
        android:icon="@drawable/sms_icon"
        app:showAsAction="always" />
    <item android:id="@+id/action_email" android:title="@string/action_email"
        android:icon="@drawable/emai_icon"
        app:showAsAction="always" />

</menu>
