<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shaheed.klassify.ViewAdActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <ImageView
            android:layout_width="145dp"
            android:layout_height="130dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal|top"
            android:background="@drawable/klassify_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/viewad_textview_adtitle"
            android:id="@+id/viewad_textview_adtitle"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />

        <com.android.volley.toolbox.NetworkImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/viewad_networkimageview_loading"
            android:layout_below="@+id/viewad_textview_adtitle"
            android:layout_centerHorizontal="true"
            android:background="@drawable/loading"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/viewad_textview_price"
            android:id="@+id/viewad_textview_price"
            android:layout_below="@+id/viewad_networkimageview_loading"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/viewad_textview_description"
            android:id="@+id/viewad_textview_description"
            android:layout_below="@+id/viewad_textview_price"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/viewad_textview_category"
            android:id="@+id/viewad_textview_category"
            android:layout_below="@+id/viewad_textview_description"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/viewad_textview_subcategory"
            android:id="@+id/viewad_textview_subcategory"
            android:layout_alignTop="@+id/viewad_textview_category"
            android:layout_alignRight="@+id/viewad_textview_price"
            android:layout_alignEnd="@+id/viewad_textview_price" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This ad was posted by "
            android:id="@+id/viewad_textview_posted"
            android:layout_below="@+id/viewad_textview_subcategory"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/viewad_type"
            android:id="@+id/viewad_textview_type"
            android:layout_above="@+id/viewad_textview_description"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    </ScrollView>
