<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#d3d3d3">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:background="#d3d3d3"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:textColor="#000"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/registration_edittext_fullName"
            android:layout_gravity="center_horizontal"
            android:hint="Full Name"
            android:layout_marginTop="40dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registration_edittext_password"
            android:layout_gravity="center_horizontal"
            android:hint="Password"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registration_edittext_confirmPassword"
            android:hint="Confirm Password"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/registration_edittext_email"
            android:layout_gravity="center_horizontal"
            android:hint="Email"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:hint="Address"
            android:id="@+id/registration_edittext_address"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/registration_edittext_phone"
            android:hint="Phone Number"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_signup"
            android:id="@+id/registration_button_signup"
            android:textColor="#ffffff"
            android:textStyle="bold"

            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_social_signup"
            android:id="@+id/registration_button_socialSignup"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>

</ScrollView>
